# velocity

./: .gitignore  Cargo.toml  README.md  build.sh
examples/: basic.velocity  enum_test.velocity  hello_world.velocity
runtime/: Math.hpp  prelude.hpp
src/: ast.rs  compiler.rs  error.rs  main.rs  parser.rs  span.rs  tokenizer.rs
src/codegen/: codegen.rs
src/parsing/: ast.rs  mod.rs  parser.rs
src/tokenizer/: mod.rs  token.rs  tokenizer.rs
std/: array.vc
