[package]
name = "velocity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm13-0",
], optional = true }
cranelift = "0.86.1"
cranelift-module = "0.86.1"
cranelift-jit = "0.86.1"
cranelift-object = "0.86.1"

[features]
default = ["llvm"]
llvm = ["inkwell"]
